public/2020/05/08/Unity/ToLua/ToLua 介绍/ToLua/Core/LuaDLL.cs

        
        //返回当前的钩子掩码 (mask) 
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_gethookmask(IntPtr L);
        
        //返回当前钩子记数
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_gethookcount(IntPtr L);

        //lualib.h 意思是加载Lua 的所有标准库
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void luaL_openlibs(IntPtr luaState);

        //lauxlib.h 
        public static int abs_index(IntPtr L, int i)
        {
            return (i > 0 || i <= LuaIndexes.LUA_REGISTRYINDEX) ? i : lua_gettop(L) + i + 1;
        }
        
        //不赞成使用luaL_getn和luaL_setn(来自辅助库)函数。使用lua_objlen代替luaL_getn，使用nothing代替luaL_setn。
        public static int luaL_getn(IntPtr luaState, int i)
        {
            return (int)tolua_getn(luaState, i);
        }
        
        //从对象在索引obj的元表中推送字段e到堆栈上。如果对象没有元表，或者元表没有这个字段，返回0，不推送任何内容。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int luaL_getmetafield(IntPtr luaState, int stackPos, string field);           //[-0, +(0|1), m]
        
        //如果在索引obj上的对象有一个元表，这个元表有一个字段e，这个函数调用这个字段并将对象作为它的唯一参数传递。在本例中，该函数返回1并将调用返回的值压入堆栈。如果没有元表或元方法，该函数返回0(不将任何值压入堆栈)。
        public static int luaL_callmeta(IntPtr L, int stackPos, string field)                              //[-0, +(0|1), m]
        {
            stackPos = abs_index(L, stackPos);

            if (luaL_getmetafield(L, stackPos, field) == 0)  /* no metafield? */
            {
                return 0;
            }

            lua_pushvalue(L, stackPos);

            if (lua_pcall(L, 1, 1, 0) != 0)
            {
                string error = LuaDLL.lua_tostring(L, -1);
                lua_pop(L, 1);
                throw new LuaException(error);
            }

            return 1;
        }

        public static int luaL_argerror(IntPtr L, int narg, string extramsg)
        {
            if (tolua_argerror(L, narg, extramsg) != 0)
            {
                string error = LuaDLL.lua_tostring(L, -1);
                lua_pop(L, 1);
                throw new LuaException(error);
            }

            return 0;
        }
        
        //生成一个错误消息
        public static int luaL_typerror(IntPtr L, int stackPos, string tname, string t2 = null)
        {
            if (t2 == null)
            {
                t2 = luaL_typename(L, stackPos);
            }

            string msg = string.Format("{0} expected, got {1}", tname, t2);
            return luaL_argerror(L, stackPos, msg);
        }
        
        
        //检查函数参数narg是否为字符串并返回该字符串;如果l不是NULL，则用字符串的长度填充*l。
        public static string luaL_checklstring(IntPtr L, int numArg, out int len)
        {
            IntPtr str = tolua_tolstring(L, numArg, out len);

            if (str == IntPtr.Zero)
            {
                luaL_typerror(L, numArg, "string");
                return null;
            }

            return lua_ptrtostring(str, len);
        }
        
        //如果函数参数narg是一个字符串，返回这个字符串。如果该参数不存在或为nil，则返回d。否则，将引发错误。
        public static string luaL_optlstring(IntPtr L, int narg, string def, out int len)
        {
            if (lua_isnoneornil(L, narg))
            {
                len = def != null ? def.Length : 0;
                return def;
            }

            return luaL_checklstring(L, narg, out len);
        }
        
        //检查函数参数narg是否为数字并返回该数字。
        public static double luaL_checknumber(IntPtr L, int stackPos)
        {
            double d = lua_tonumber(L, stackPos);

            if (d == 0 && LuaDLL.lua_isnumber(L, stackPos) == 0)
            {
                luaL_typerror(L, stackPos, "number");
                return 0;
            }

            return d;
        }
        
        //如果函数参数narg是一个数字，则返回这个数字。如果该参数不存在或为nil，则返回d。否则，将引发错误。
        public static double luaL_optnumber(IntPtr L, int idx, double def)
        {
            if (lua_isnoneornil(L, idx))
            {
                return def;
            }

            return luaL_checknumber(L, idx);
        }
        
        //检查函数参数narg是否是一个数字，并将该数字转换为lua_Integer。
        public static int luaL_checkinteger(IntPtr L, int stackPos)
        {
            int d = tolua_tointeger(L, stackPos);

            if (d == 0 && lua_isnumber(L, stackPos) == 0)
            {
                luaL_typerror(L, stackPos, "number");
                return 0;
            }

            return d;
        }

        public static int luaL_optinteger(IntPtr L, int idx, int def)
        {
            if (lua_isnoneornil(L, idx))
            {
                return def;
            }

            return luaL_checkinteger(L, idx);
        }

        public static bool luaL_checkboolean(IntPtr luaState, int index)
        {
            if (lua_isboolean(luaState, index))
            {
                return lua_toboolean(luaState, index);
            }

            luaL_typerror(luaState, index, "boolean");
            return false;
        }
        
        //将堆栈大小增加到top + sz元素，如果堆栈不能增加到那个大小，就会产生一个错误。msg是一个附加文本进入错误消息。
        public static void luaL_checkstack(IntPtr L, int space, string mes)
        {
            if (lua_checkstack(L, space) == 0)
            {
                throw new LuaException(string.Format("stack overflow {0}", mes));
            }
        }
        
        //检查函数参数narg的类型是否为t。
        public static void luaL_checktype(IntPtr L, int narg, LuaTypes t)
        {
            if (lua_type(L, narg) != t)
            {
                luaL_typerror(L, narg, lua_typename(L, t));
            }
        }
        
        //检查函数在narg位置是否有任何类型的参数(包括nil)。
        public static void luaL_checkany(IntPtr L, int narg)
        {
            if (lua_type(L, narg) == LuaTypes.LUA_TNONE)
            {
                luaL_argerror(L, narg, "value expected");
            }
        }
        
        //检查函数参数narg是否是tname类型的用户数据(请参阅luaL_newmetatable)。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int luaL_newmetatable(IntPtr luaState, string meta);                               //[-0, +1, m]
        
        //检查函数参数narg是否是tname类型的用户数据(请参阅luaL_newmetatable)。
        public static IntPtr luaL_checkudata(IntPtr L, int ud, string tname)
        {
            IntPtr p = lua_touserdata(L, ud);

            if (p != IntPtr.Zero)
            {
                if (lua_getmetatable(L, ud) != 0)
                {
                    lua_getfield(L, LuaIndexes.LUA_REGISTRYINDEX, tname);  /* get correct metatable */

                    if (lua_rawequal(L, -1, -2) != 0)
                    {  /* does it have the correct mt? */
                        lua_pop(L, 2);  /* remove both metatables */
                        return p;
                    }
                }
            }

            luaL_typerror(L, ud, tname);    /* else error */
            return IntPtr.Zero;             /* to avoid warnings */
        }
        
        //将一个字符串压入堆栈，该字符串标识调用堆栈中控件在lvl级的当前位置。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void luaL_where(IntPtr luaState, int level);                                           //[-0, +1, e]

        //[DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        //public static extern int luaL_error(IntPtr luaState, string message);

        public static int luaL_throw(IntPtr L, string message)
        {
            tolua_pushtraceback(L);
            lua_pushstring(L, message);
            lua_pushnumber(L, 1);

            if (lua_pcall(L, 2, -1, 0) == 0)
            {
                message = lua_tostring(L, -1);
            }
            else
            {
                lua_pop(L, 1);
            }

            throw new LuaException(message, null, 2);
        }
        
        //在索引t处的表中为堆栈顶部的对象创建并返回一个引用(并弹出该对象)。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int luaL_ref(IntPtr luaState, int t);                                                  //[-1, +0, m]
        
        //从索引t处的表中释放引用ref(请参阅luaL_ref)。条目从表中删除，以便可以收集所引用的对象。引用ref也被释放以再次使用。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void luaL_unref(IntPtr luaState, int registryIndex, int reference);
        
        //以Lua块的形式加载文件。这个函数使用lua_load将块加载到名为filename的文件中。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int luaL_loadfile(IntPtr luaState, string filename);                                   //[-0, +1, e]
        
        //作为Lua块加载缓冲区。这个函数使用lua_load加载大小为sz的buff所指向的缓冲区中的块。
        public static int luaL_loadbuffer(IntPtr luaState, byte[] buff, int size, string name)
        {
            return tolua_loadbuffer(luaState, buff, size, name);
        }
        
        //加载作为Lua块的字符串。这个函数使用lua_load将块加载到零终止字符串s中。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int luaL_loadstring(IntPtr luaState, string chunk);
        
        //创建一个新的Lua状态。它使用基于标准C realloc函数的分配器调用lua_newstate，然后设置一个panic函数(参见lua_atpanic)，该函数在发生致命错误时向标准错误输出输出一条错误消息。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr luaL_newstate();
        
        //通过将出现的字符串p替换为字符串r来创建字符串s的副本。将得到的字符串压入堆栈并返回。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr luaL_gsub(IntPtr luaState, string str, string pattern, string replacement);     //[-0, +1, e]  

        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr luaL_findtable(IntPtr luaState, int idx, string fname, int szhint = 1);

        /*
         ** ===============================================================
         ** some useful functions
         ** ===============================================================
        */
        public static string luaL_typename(IntPtr luaState, int stackPos)
        {
            LuaTypes type = LuaDLL.lua_type(luaState, stackPos);
            return lua_typename(luaState, type);
        }
        
        //加载并运行给定的文件。
        public static bool luaL_dofile(IntPtr luaState, string fileName)                                              //[-0, +1, e]
        {
            int result = luaL_loadfile(luaState, fileName);

            if (result != 0)
            {
                return false;
            }

            return LuaDLL.lua_pcall(luaState, 0, LUA_MULTRET, 0) == 0;
        }
        
        //加载并运行给定的字符串
        public static bool luaL_dostring(IntPtr luaState, string chunk)
        {
            int result = LuaDLL.luaL_loadstring(luaState, chunk);

            if (result != 0)
            {
                return false;
            }

            return LuaDLL.lua_pcall(luaState, 0, LUA_MULTRET, 0) == 0;
        }
        
        
        //在注册表中将与名称tname关联的元表压入堆栈
        public static void luaL_getmetatable(IntPtr luaState, string meta)
        {
            LuaDLL.lua_getfield(luaState, LuaIndexes.LUA_REGISTRYINDEX, meta);
        }

        //在索引t的表中为堆栈顶部的对象创建并返回引用（并弹出对象）。
        /* compatibility with ref system */
        public static int lua_ref(IntPtr luaState)
        {
            return LuaDLL.luaL_ref(luaState, LuaIndexes.LUA_REGISTRYINDEX);
        }
        
        //
        public static void lua_getref(IntPtr luaState, int reference)
        {
            lua_rawgeti(luaState, LuaIndexes.LUA_REGISTRYINDEX, reference);
        }
